feat: adiciona check-in por qr code e exportação csv
